--- a/ReadMe
+++ b/ReadMe
@@ -25,3 +25,8 @@ audioFormat：音频码格式
 本项目使用于Unity2018.4.1f1 建议使用2018以上版本 2017.3会出现一些问题
 
 LUIS相关尚未集成在本项目中，该项目会不定期更新
+
+7/9/2017更新
+优化了脚本结构 各个部分分离了出来，让整体更加清晰
+增加了一个自定义的语音模型（利用同事的语音做的哈哈哈哈 超级傻）
+优化了响应结构，响应速度更快了一点
