--- a/ReadMe
+++ b/ReadMe
@@ -30,3 +30,10 @@ LUIS相关尚未集成在本项目中，该项目会不定期更新
 优化了脚本结构 各个部分分离了出来，让整体更加清晰
 增加了一个自定义的语音模型（利用同事的语音做的哈哈哈哈 超级傻）
 优化了响应结构，响应速度更快了一点
+
+这里说一下新定义的语音模型和神经语音这两个概念
+自定义的语音模型是通过你上传语音进行训练，让合成的语音按照你的声纹进行输出
+神经语音包含更加流畅的合成体验，可以增加相应的情绪，音调等
+
+更具体的可以参考SSML的相关内容，代码比较浅显，这里不说了
+
