--- a/ReadMe
+++ b/ReadMe
@@ -37,3 +37,10 @@ LUIS相关尚未集成在本项目中，该项目会不定期更新
 
 更具体的可以参考SSML的相关内容，代码比较浅显，这里不说了
 
+2020/8/4
+更新
+在经历了上次的白嫖活动之后 这个量的收费不太是个人能够支撑的住的，建议先不要使用其他的服务，只开启单项的语音转文字功能即可。
+但是该项目目前有些鸡肋。现在转向讯飞语音通讯功能
+该贴正在编辑。
+此处挖坑。
+
